added js folder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Hitched!</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<script src="js/main.js"></script>
 </head>
 <body>
 <!--
