--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
 	<script src="js/main.js"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@ animated welcome svg
 <!-- super duper badass animating text -->
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319.4 239.1" enable-background="new 0 0 319.4 239.1">
 
-	  <g class="logo animated bounce">
+	  <g class="logo">
 	    <path class="st1" fill="transparent" d="M74.1 89.1h2.6l8-21.4h-3v-2.6h12.2v2.6h-3l8 21.4h2.6v2.7h-8.9v-2.6h3.1l-2.4-6.6h-11.1l-2.4 6.6h3.2v2.6h-8.9v-2.7zm18.1-9.1l-4.5-12.5-4.6 12.5h9.1zM103.9 89.1h3.4v-21.4h-3.4v-2.7h10.2v2.7h-3.7v21.4h9.3v-4.1h2.9v6.7h-18.6v-2.6zM126.4 89.1h3.4v-21.4h-3.4v-2.7h10.2v2.7h-3.7v21.4h9.3v-4.1h2.9v6.7h-18.6v-2.6zM149 89.1h3.6v-21.4h-3.6v-2.7h10.2v2.7h-3.6v21.4h3.6v2.7h-10.2v-2.7zM163.4 86.7c0-1.5.9-2.6 2.2-2.6 1.3 0 2.1.9 2.1 2 0 .7-.3 1.3-.7 1.8.9.9 2.9 1.7 5.3 1.7 3.6 0 5.7-1.8 5.7-4.7 0-2.8-2.5-4-5.6-5.2-4.6-1.7-8.1-3.5-8.1-8 0-4.1 3.2-7.1 8.2-7.1 4.4 0 8 2.5 8 5.3 0 1.5-1 2.4-2.1 2.4-1.3 0-2.2-1-2.2-2.1 0-.6.3-1.2.6-1.5-.7-.8-2.7-1.3-4.3-1.3-3.2 0-5.2 1.7-5.2 4.2 0 2.8 2.5 4 5.9 5.3 4.4 1.7 7.8 3.4 7.8 7.9 0 4.7-3.7 7.6-8.8 7.6-5.2-.2-8.8-3.1-8.8-5.7zM185.7 78.5c0-7.8 5.7-13.9 13.6-13.9 7.8 0 13.4 6.1 13.4 13.8 0 7.8-5.8 13.9-13.6 13.9-7.7 0-13.4-6.1-13.4-13.8zm23.9 0c0-6.3-4.3-11.1-10.4-11.1-6.1 0-10.4 4.8-10.4 11 0 6.3 4.3 11.1 10.4 11.1 6.1 0 10.4-4.8 10.4-11zM223.2 70.3v18.8h3.5v2.7h-9.8v-2.7h3.4v-21.4h-3.4v-2.7h6l15.4 20.3v-17.6h-3.5v-2.7h9.7v2.7h-3.3v24.1h-1.7l-16.3-21.5z"/></g>
 	    <g class="st0">
 	      <path class="st1" fill="transparent" d="M148.7 118.5c0-1.1 1-1.9 2.4-1.9.7 0 1.5.2 1.8.3v-.9c0-.4-.1-.7-.3-.9-.3-.3-.7-.5-1.4-.5-.5 0-.8.1-1 .3 0 .1.1.2.1.4 0 .4-.3.6-.7.6-.4 0-.6-.3-.6-.7 0-.7.8-1.4 2.3-1.4.9 0 1.6.3 2 .7.3.4.5.8.5 1.3v3.4h1v.9h-1.9v-.8c-.5.5-1.3.9-2.2.9-1.1.1-2-.6-2-1.7zm4.2.1v-1c-.5-.1-1.1-.2-1.7-.2-1 0-1.5.5-1.5 1.1 0 .6.5 1 1.3 1s1.4-.4 1.9-.9zM157.8 115.1c.6-.7 1.4-1.3 2.3-1.3.8 0 1.3.3 1.7.8.2.4.3.8.3 1.3v3.4h1v.9h-3v-.9h1v-3.2c0-.3 0-.6-.2-.8-.2-.4-.5-.5-1-.5-.8 0-1.5.5-2 1.1v3.4h1v.9h-3v-.9h1v-4.5h-1v-.8h2v1.1zM164 117.1c0-1.8 1.2-3.3 3.1-3.3.8 0 1.4.3 1.9.7v-4.2h-1.2v-.9h2.2v9.8h1v.9h-2v-.9c-.5.6-1.2 1-2.1 1-1.6.1-2.9-1.2-2.9-3.1zm5 1.4v-3.1c-.5-.4-1.1-.7-1.9-.7-1.2 0-2.1 1-2.1 2.4s.9 2.3 2 2.3c.9 0 1.5-.4 2-.9z"/></g>
@@ -33,7 +34,7 @@ animated welcome svg
 <!-- end -->
 
 <!-- sort of baller RSVP button -->
-<a href="#" class="action-button shadow animate datPurp">rsvp</a>
+<a href="http://kovatfirstsight.rsvpify.com" target="blank" class="action-button shadow animate datPurp animated fadeIn zoomInUp">RSVP</a>
 <!-- end -->
 </div>
 <!--
