image hell icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Hitched!</title>
+	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -14,7 +15,9 @@
 animated welcome svg
 =====================
 -->
-<div class="section-one">
+<div class="section-one image" id="one">
+
+
 
 <!-- super duper badass animating text -->
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319.4 239.1" enable-background="new 0 0 319.4 239.1">
@@ -31,18 +34,23 @@ animated welcome svg
 	    </g>
 	  </g>
 	</svg>
-<!-- end -->
+<!-- end super duper badass animating text -->
 
 <!-- sort of baller RSVP button -->
-<a href="http://kovatfirstsight.rsvpify.com" target="blank" class="action-button shadow animate datPurp animated fadeIn zoomInUp">RSVP</a>
-<!-- end -->
+<a href="https://kovatfirstsight.anrsvp.com" target="blank" class="action-button shadow animate datPurp animated fadeIn">RSVP</a>
+<!-- end RSVP button -->
+
+<!-- scroll down -->
+<a href"#two"><i class="fa fa-angle-double-down animated bounce"></i></a>
+<a href"#two">go to section TWO!</a>
+<!--end scroll down -->
 </div>
 <!--
 =====================
 Wedding information
 =====================
 -->
-	<div class="section-two"></div>
+	<div class="section-two" id="two"></div>
 <!--
 =====================
 Hotels
