--- a/index.html
+++ b/index.html
@@ -41,22 +41,37 @@ animated welcome svg
 <!-- end RSVP button -->
 
 <!-- scroll down -->
-<a href"#two"><i class="fa fa-angle-double-down animated bounce"></i></a>
-<a href"#two">go to section TWO!</a>
+<a href="#two"><i class="fa fa-angle-double-down animated bounce"></i></a>
 <!--end scroll down -->
+
+<!-- end section -->
 </div>
 <!--
 =====================
 Wedding information
 =====================
 -->
-	<div class="section-two" id="two"></div>
+	<div class="section-two" id="two">
+
+
+<h1>
+Welcome to section 2!!!!! <br>
+all about Wedding information
+</h1>
+
+
+	</div>
 <!--
 =====================
 Hotels
 =====================
 -->
-	<div class="section-three"></div>
+	<div class="section-three">
+		<h1>
+		Welcome to section 2!!!!! <br>
+		all about Hotels
+		</h1>
+	</div>
 <!--
 =====================
 Travel
