--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
 	<script src="js/main.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+
+
 </head>
 <body>
 <!--
@@ -55,10 +58,11 @@ Wedding information
 
 
 <h1>
-Welcome to section 2!!!!! <br>
+Welcome to section 3!!!!! <br>
 all about Wedding information
 </h1>
 
+<a href="#three"><i class="fa fa-angle-double-down animated bounce"></i></a>
 
 	</div>
 <!--
@@ -66,7 +70,7 @@ all about Wedding information
 Hotels
 =====================
 -->
-	<div class="section-three">
+	<div class="section-three" id="three">
 		<h1>
 		Welcome to section 2!!!!! <br>
 		all about Hotels
