--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Wedding information
 -->
 	<div class="section-two image" id="anchor-2">
 
-		<div class="row space">
+		<div class="row space panel">
 			<div class="col col-span-5">
 				<div class="weddingText">
 				<h1>Wedding<br>Information</h1>
