--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Wedding information
 
 
 
-<a href="#anchor-3"><i id="anchor-2" class="fa fa-angle-double-down animated bounce"></i></a>
+<a href="#anchor-3" onclick="smoothScroll('anchor-3');"><i id="anchor-2" class="fa fa-angle-double-down animated bounce"></i></a>
 
 	</div>
 <!--
@@ -91,12 +91,53 @@ Wedding information
 Hotels
 =====================
 -->
-	<div class="section-three" id="three">
-		<h1>
-		Welcome to section 2!!!!! <br>
-		all about Hotels
-		</h1>
+	<div class="section-three" id="anchor-3">
+		<h1 class="noPanelTitle">Accomodations</h1>
+		<hr align="center" width="80%">
+
+		<div class="row space panel">
+			<div class="col col-span-5">
+				<img src="http://placehold.it/400x200" class="hotelImgOne">
+			</div>
+			<div class="col col-span-7">
+				<p class="hotelText">
+				<strong>Hotel 1</strong> <br>
+				$131.22
+				1952 Allens Ln, Wilmington, NC 28403  <br>
+				910-392-3227 <br>
+				<nav class="cl-effect-8">
+					<a href="#">link to site</a>
+					<a href="#">link to directions</a>
+				</nav>
+			</p>
+			</div>
+
+			</div>
+
+			<div class="row space panel add">
+				<div class="col col-span-5">
+					<img src="http://placehold.it/400x200" class="hotelImgOne">
+				</div>
+				<div class="col col-span-7">
+					<p class="hotelText">
+					<strong>Hotel 1</strong> <br>
+					$131.22
+					1952 Allens Ln, Wilmington, NC 28403  <br>
+					910-392-3227 <br>
+					<nav class="cl-effect-8">
+						<a href="#">link to site</a>
+						<a href="#">link to directions</a>
+					</nav>
+				</p>
+				</div>
+
+				</div>
+
+
+
+		<a href="#anchor-4"><i class="fa fa-angle-double-down animated bounce"></i></a>
 	</div>
+
 <!--
 =====================
 Travel
