--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Wedding information
 Hotels
 =====================
 -->
-	<div class="section-three" id="anchor-3">
+	<div id="anchor-3" class="section-three">
 		<h1 class="noPanelTitle">Accomodations</h1>
 		<hr align="center" width="80%">
 
@@ -99,10 +99,10 @@ Hotels
 			<div class="col col-span-5">
 				<img src="http://placehold.it/400x200" class="hotelImgOne">
 			</div>
-			<div class="col col-span-7">
+			<div class="col col-span-6">
 				<p class="hotelText">
 				<strong>Hotel 1</strong> <br>
-				$131.22
+				$131.22 <br>
 				1952 Allens Ln, Wilmington, NC 28403  <br>
 				910-392-3227 <br>
 				<nav class="cl-effect-8">
@@ -118,10 +118,10 @@ Hotels
 				<div class="col col-span-5">
 					<img src="http://placehold.it/400x200" class="hotelImgOne">
 				</div>
-				<div class="col col-span-7">
+				<div class="col col-span-6">
 					<p class="hotelText">
 					<strong>Hotel 1</strong> <br>
-					$131.22
+					$131.22 <br>
 					1952 Allens Ln, Wilmington, NC 28403  <br>
 					910-392-3227 <br>
 					<nav class="cl-effect-8">
@@ -135,7 +135,7 @@ Hotels
 
 
 
-		<a href="#anchor-4"><i class="fa fa-angle-double-down animated bounce"></i></a>
+				<a href="#anchor-4" onclick="smoothScroll('anchor-4');"><i id="anchor-3" class="fa fa-angle-double-down animated bounce"></i></a>
 	</div>
 
 <!--
@@ -143,19 +143,89 @@ Hotels
 Travel
 =====================
 -->
-	<div class="section-four"></div>
+	<div id="anchor-4" class="section-four">
+
+		<div class="panel">
+			<div class="travelText">
+				<h1>Travel</h1>
+				<hr>
+				<p class="smallerText">For those of you who are traveling from out-of-town,
+					we are so grateful that you are making the trip to (ILM)Wilmington
+					for our wedding celebration. Feel free to use the map below to search
+					for flights (Directions > Airplane Icon). Flying into (MYR)Myrtle Beach, SC or (RDU)Raleigh, NC are other
+					travel options. The flights are typically cheaper, however there
+					will be about an hour and a half to two hour drive to Wilmington.
+					Please contact us if you have any concerns or questions about travel.
+				</p>
+			</div>
+			<iframe class="map"
+			  width="80%"
+			  height="450"
+			  frameborder="0" style="border:0"
+			  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAWcHss26i43lZC4fdm-Q_Sr-S-Uu0PB0I
+			    &q=Wrightsville+Manor,Wilmington+NC" allowfullscreen>
+			</iframe>
+
+		</div>
+		<a href="#anchor-5" onclick="smoothScroll('anchor-5');"><i id="anchor-4" class="fa fa-angle-double-down animated bounce"></i></a>
+	</div>
 <!--
 =====================
 Things to do
 =====================
 -->
-	<div class="section-five"></div>
+	<div id="anchor-5" class="section-five">
+		<h1 class="noPanelTitle">Dope Shit to do when you livin dat salt life</h1>
+		<hr align="center" width="80%">
+
+		<div class="row space panel">
+			<div class="col col-span-5">
+				<img src="http://placehold.it/400x200" class="hotelImgOne">
+			</div>
+			<div class="col col-span-6">
+				<p class="hotelText smallerText">
+				<strong>Thing 1</strong> <br>
+				Normally, both your asses would be dead as fucking fried chicken,<br>
+				but you happen to pull this shit while I'm in a transitional period<br>
+				so I don't wanna kill you, I wanna help you <br>
+				<nav class="cl-effect-8">
+					<a href="#">link to site</a>
+					<a href="#">link to directions</a>
+				</nav>
+			</p>
+			</div>
+
+
+			</div>
+
+			<div class="row space panel add">
+				<div class="col col-span-5">
+					<img src="http://placehold.it/400x200" class="hotelImgOne">
+				</div>
+				<div class="col col-span-6">
+					<p class="hotelText smallerText">
+					<strong>Thing 2</strong> <br>
+					Normally, both your asses would be dead as fucking fried chicken,<br>
+					but you happen to pull this shit while I'm in a transitional period<br>
+					so I don't wanna kill you, I wanna help you <br>
+					<nav class="cl-effect-8">
+						<a href="#">link to site</a>
+						<a href="#">link to directions</a>
+					</nav>
+				</p>
+				</div>
+
+				</div>
+
+				<a href="#anchor-6" onclick="smoothScroll('anchor-6');"><i id="anchor-5" class="fa fa-angle-double-down animated bounce"></i></a>
+
+	</div>
 <!--
 =====================
 Registry
 =====================
 -->
-	<div class="section-six"></div>
+	<div id="anchor-6" class="section-six"></div>
 <!--
 =====================
 Our Story / Photos
