--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title>Hitched!</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
 	<script src="js/main.js"></script>
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-
+	<!-- <script src="jquery-3.1.1.min.js"></script> -->
 
 </head>
 <body>
@@ -18,8 +18,17 @@
 animated welcome svg
 =====================
 -->
-<div class="section-one image" id="one">
 
+<div class="section-one image" id="one">
+	<div id="sidebar">
+
+			<ul>
+				<li><a href="index.html">jQuery (animated)</a></li>
+				<li><a href="css.html">CSS (fixed)</a></li>
+				<li><a href="reveal.html">CSS (reveal)</a></li>
+		</ul>
+
+	</div>
 
 
 <!-- super duper badass animating text -->
