--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@ animated welcome svg
 =====================
 -->
 
-<div class="section-one image" id="one">
+<div class="section-one image" id="anchor-1">
+
 	<div id="sidebar">
 
 			<ul>
-				<li><a href="index.html">jQuery (animated)</a></li>
-				<li><a href="css.html">CSS (fixed)</a></li>
-				<li><a href="reveal.html">CSS (reveal)</a></li>
+				<li><a href="#anchor-1" onclick="smoothScroll('anchor-1');">Home</a></li>
+				<li><a href="#anchor-2" onclick="smoothScroll('anchor-2');">Wedding Information</a></li>
+				<li><a href="#anchor-3" onclick="smoothScroll('anchor-3');">Accomodations</a></li>
+				<li><a href="#anchor-4" onclick="smoothScroll('anchor-4');">Travel</a></li>
+				<li><a href="#anchor-5" onclick="smoothScroll('anchor-5');">Activities</a></li>
+				<li><a href="#anchor-6" onclick="smoothScroll('anchor-6');">Registry</a></li>
+				<li><a href="#anchor-7" onclick="smoothScroll('anchor-7');">Photos</a></li>
+
+
 		</ul>
 
 	</div>
@@ -53,7 +60,7 @@ animated welcome svg
 <!-- end RSVP button -->
 
 <!-- scroll down -->
-<a href="#anchor-2" onclick="smoothScroll('anchor-2');"><i class="fa fa-angle-double-down animated bounce"></i></a>
+<a href="#anchor-2" onclick="smoothScroll('anchor-2');"><i class="fa fa-angle-double-down pink animated bounce"></i></a>
 <!--end scroll down -->
 
 <!-- end section -->
@@ -102,7 +109,7 @@ Hotels
 -->
 	<div id="anchor-3" class="section-three">
 		<h1 class="noPanelTitle">Accomodations</h1>
-		<hr align="center" width="80%">
+		<!-- <hr align="center" width="80%"> bug were it was showing over the sidebar -->
 
 		<div class="row space panel">
 			<div class="col col-span-5">
@@ -125,6 +132,7 @@ Hotels
 
 			<div class="row space panel add">
 				<div class="col col-span-5">
+
 					<img src="http://placehold.it/400x200" class="hotelImgOne">
 				</div>
 				<div class="col col-span-6">
@@ -144,7 +152,7 @@ Hotels
 
 
 
-				<a href="#anchor-4" onclick="smoothScroll('anchor-4');"><i id="anchor-3" class="fa fa-angle-double-down animated bounce"></i></a>
+				<a href="#anchor-4" onclick="smoothScroll('anchor-4');"><i id="anchor-3" class="fa fa-angle-double-down pink animated bounce"></i></a>
 	</div>
 
 <!--
@@ -226,8 +234,7 @@ Things to do
 
 				</div>
 
-				<a href="#anchor-6" onclick="smoothScroll('anchor-6');"><i id="anchor-5" class="fa fa-angle-double-down animated bounce"></i></a>
-
+				<a href="#anchor-6" onclick="smoothScroll('anchor-6');"><i id="anchor-5" class="fa fa-angle-double-down pink animated bounce"></i></a>
 	</div>
 <!--
 =====================
