added modal component

--- a/index.html
+++ b/index.html
@@ -124,9 +124,27 @@ Hotels
 				<nav class="cl-effect-8">
 					<a href="#">link to site</a>
 					<a href="#">link to directions</a>
+					<a href="#modal-one">Modal!</a>
+
+				<!-- Modal -->
+				<div class="modal" id="modal-one" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-header">
+							<h2>Modal in CSS?</h2>
+							<a href="#" class="btn-close" aria-hidden="true">×</a>
+						</div>
+						<div class="modal-body">
+							<p>One modal example here! :D</p>
+						</div>
+						<div class="modal-footer">
+							<a href="#anchor-3" class="btn">Nice!</a>
+						</div>
+					</div>
+
 				</nav>
 			</p>
 			</div>
+			<!-- end Modal -->
 
 			</div>
 
