hotel specific info added still need to clean up more info modal

--- a/index.html
+++ b/index.html
@@ -117,34 +117,43 @@ Hotels
 			</div>
 			<div class="col col-span-6">
 				<p class="hotelText">
-				<strong>Hotel 1</strong> <br>
-				$131.22 <br>
-				1952 Allens Ln, Wilmington, NC 28403  <br>
-				910-392-3227 <br>
+				<strong>Hampton Inn & Suites Landfall Park</strong> <br>
+				$104 and up<br>
+				1989 Eastwood Road, Wilmington, NC 28403<br>
+				910-256-9600 <br>
 				<nav class="cl-effect-8">
-					<a href="#">link to site</a>
+					<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
 					<a href="#">link to directions</a>
-					<a href="#modal-one">Modal!</a>
+					<a href="#modal-one">More Info</a>
 
-				<!-- Modal -->
-				<div class="modal" id="modal-one" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-header">
-							<h2>Modal in CSS?</h2>
-							<a href="#" class="btn-close" aria-hidden="true">×</a>
-						</div>
-						<div class="modal-body">
-							<p>One modal example here! :D</p>
-						</div>
-						<div class="modal-footer">
-							<a href="#anchor-3" class="btn">Nice!</a>
-						</div>
+			<!-- Modal -->
+			<div class="modal" id="modal-one" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-header">
+						<h2>Hampton Inn & Suites Landfall Park</h2>
+						<p><b>1989 Eastwood Road, Wilmington, NC 28403</b></p>
+						<p><b>910-256-9600</b></p>
+						<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
 					</div>
+					<div class="modal-body">
+						<p>Room Rates: <br />
+						King Guest Rooms (weeknights - Sunday) $104<br />
+						Double/Double Guest Rooms (weeknights - Sunday) $109<br />
+						King Guest Rooms (Weekend nights - Friday-Saturday) $139<br />
+						Double/Double Guest Rooms (Weekend nights - Friday-Saturday) $149</p>
+						<p>To make a reservation: Call <b>910-256-9600</b> and request the Smith/Kalmykov Wedding group block or you can make a reservation here: http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG<br />
+						<p>The special room rate will be available until September 22nd or until the group block is sold-out, whichever comes first. <br />
+						<p>It's a 10 minute walk to Wrightsville Manor or a 4 minute drive. Walking distance to lots of restaurants at Lumina Station and a 7 min. drive to shopping and restaurants at Mayfaire Towne Center. 4 min to Wrightsville Beach<br />
+					</div>
+					<div class="modal-footer">
+						<a href="#anchor-3" class="btn">back</a>
+					</div>
+				</div>
+				<!-- end Modal -->
 
 				</nav>
 			</p>
 			</div>
-			<!-- end Modal -->
 
 			</div>
 
@@ -155,13 +164,41 @@ Hotels
 				</div>
 				<div class="col col-span-6">
 					<p class="hotelText">
-					<strong>Hotel 1</strong> <br>
-					$131.22 <br>
-					1952 Allens Ln, Wilmington, NC 28403  <br>
-					910-392-3227 <br>
+					<strong>Hilton Garden Inn Mayfaire Town Center</strong> <br>
+					$139 (2 night minimum) <br>
+					6745 Rock Spring Road, Wilmington, NC 28405<br>
+					910-509-4046 <br>
 					<nav class="cl-effect-8">
-						<a href="#">link to site</a>
+						<a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
 						<a href="#">link to directions</a>
+						<a href="#modal-two">More Info</a>
+<!-- Modal -->
+<div class="modal" id="modal-two" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-header">
+<h2> Hilton Garden Inn Mayfaire Town Center</h2>
+<p><b>6745 Rock Spring Road, Wilmington, NC 28405</b></p>
+<p><b>910-509-4046</b></p>
+<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
+</div>
+<div class="modal-body">
+<p>Room Rates: <br />
+$139 (2 night minimum)</p>
+
+<p> To make a reservation: Call 910-509-4046 and request the Smith-Kalmykov Wedding group block or you can make a reservation here: http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG <br />
+<p> The special room rate will be available until September 20th or until the group block is sold-out, whichever comes first.<br />
+<p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br />
+</div>
+<div class="modal-footer">
+<a href="#anchor-3" class="btn">back</a>
+</div>
+</div>
+<!-- end Modal -->
+
+						</nav>
+					</p>
+					</div>
+
 					</nav>
 				</p>
 				</div>
