activities section and link to  sites and directions

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Hotels
 				910-256-9600 <br>
 				<nav class="cl-effect-8">
 					<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
-					<a href="#">link to directions</a>
+					<a href="https://www.google.com/maps/dir//1989+Eastwood+Rd,+Wilmington,+NC+28403/@34.2234643,-77.82176,17z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89a9f36e66a75773:0x2d810d1165ae3d06!2m2!1d-77.8195713!2d34.2234599" target="blank">link to directions</a>
 					<a href="#modal-one">More Info</a>
 
 			<!-- Modal -->
@@ -168,7 +168,7 @@ Hotels
 					910-509-4046 <br>
 					<nav class="cl-effect-8">
 						<a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
-						<a href="#">link to directions</a>
+						<a href="https://www.google.com/maps/place/6745+Rock+Spring+Rd,+Wilmington,+NC+28405/@34.2374163,-77.8348776,17z/data=!3m1!4b1!4m5!3m4!1s0x89a9f35ec919904d:0x5d558a8aad873838!8m2!3d34.2374119!4d-77.8326889" target="blank">link to directions</a>
 						<a href="#modal-two">More Info</a>
 <!-- Modal -->
 <div class="modal" id="modal-two" aria-hidden="true">
@@ -219,7 +219,6 @@ Travel
 		<div class="panel">
 			<div class="travelText">
 				<h1>Travel</h1>
-				<hr>
 				<p class="smallerText">For those of you who are traveling from out-of-town,
 					we are so grateful that you are making the trip to (ILM)Wilmington
 					for our wedding celebration. Feel free to use the map below to search
@@ -246,11 +245,11 @@ Things to do
 =====================
 -->
 	<div id="anchor-5" class="section-five">
-		<h1 class="noPanelTitle">Dope Shit to do when you livin dat salt life</h1>
+		<h1 class="noPanelTitle">Dope Things to Do When You Livin Dat Salt Life</h1>
 
 		<div class="row space panel">
 			<div class="col col-span-5">
-				<img src="img/downtown.jpeg" class="activityImgOne">
+				<img src="img/downtownCropped.jpg" class="activityImgVert">
 			</div>
 			<div class="col col-span-6">
 				<p class="hotelText smallerText">
@@ -263,18 +262,17 @@ Things to do
 				 from the Visitor Information Center located on the corner of Market and S. Water Streets.
 				 <br>
 				<nav class="cl-effect-8">
-					<a href="#">link to site</a>
-					<a href="#">link to directions</a>
+					<a href="http://www.wilmingtondowntown.com/explore/attractions" target="blank">link to site</a>
+					<a href="https://www.google.com/maps/dir//Wilmington+Downtown+Incorporated,+221+N+Front+St+%23102,+Wilmington,+NC+28401/@34.2379442,-77.9843353,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89aa1fc865c3e075:0x65582ad8f0268683!2m2!1d-77.9493158!2d34.2378782" target="blank">link to directions</a>
 				</nav>
 			</p>
 			</div>
-
 
 			</div>
 
 			<div class="row space panel add">
 				<div class="col col-span-5">
-					<img src="http://placehold.it/400x200" class="hotelImgOne">
+					<img src="img/wrightsville.jpg" class="activityImg">
 				</div>
 				<div class="col col-span-6">
 					<p class="hotelText smallerText">
@@ -286,8 +284,8 @@ Things to do
 					Our favorite brunch place is the Famous Toastery.
  					<br>
 					<nav class="cl-effect-8">
-						<a href="#">link to site</a>
-						<a href="#">link to directions</a>
+						<a href="http://www.visitwrightsvillebeachnc.com/" target="blank">link to site</a>
+						<a href="https://www.google.com/maps/dir//Wrightsville+Beach,+NC/@34.2085696,-77.8313904,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89a9f301471f0185:0x81d3f3190d749c7a!2m2!1d-77.7963709!2d34.2085036" target="blank">link to directions</a>
 					</nav>
 				</p>
 				</div>
@@ -296,7 +294,7 @@ Things to do
 
 				<div class="row space panel add">
 					<div class="col col-span-5">
-						<img src="http://placehold.it/400x200" class="hotelImgOne">
+						<img src="img/lumina.jpg" class="activityImg">
 					</div>
 					<div class="col col-span-6">
 						<p class="hotelText smallerText">
@@ -307,8 +305,8 @@ Things to do
 						If you’re looking for a nicer dinner try Port Land Grille.
 	 					<br>
 						<nav class="cl-effect-8">
-							<a href="#">link to site</a>
-							<a href="#">link to directions</a>
+							<a href="http://www.luminastation.com/" target="blank">link to site</a>
+							<a href="https://www.google.com/maps/place/Lumina+Station/@34.2221869,-77.8249793,17z/data=!3m1!4b1!4m5!3m4!1s0x89a9f36f0043aaa9:0x1da549b98f962e54!8m2!3d34.2221825!4d-77.8227906" target="blank">link to directions</a>
 						</nav>
 					</p>
 					</div>
@@ -317,7 +315,7 @@ Things to do
 
 					<div class="row space panel add">
 						<div class="col col-span-5">
-							<img src="http://placehold.it/400x200" class="hotelImgOne">
+							<img src="img/mayfaire.jpg" class="activityImg">
 						</div>
 						<div class="col col-span-6">
 							<p class="hotelText smallerText">
@@ -327,8 +325,8 @@ Things to do
 							There are plenty of places to grab a bite to eat, too!
 		 					<br>
 							<nav class="cl-effect-8">
-								<a href="#">link to site</a>
-								<a href="#">link to directions</a>
+								<a href="http://www.mayfairetown.com/" target="blank">link to site</a>
+								<a href="https://www.google.com/maps/dir//Mayfaire+Town+Center,+6835+Conservation+Way,+Wilmington,+NC+28405/@34.2424728,-77.8327703,17z/data=!4m15!1m6!3m5!1s0x89a9f35a03f7c359:0x179c4047cbc6f2be!2sMayfaire+Town+Center!8m2!3d34.2424684!4d-77.8305816!4m7!1m0!1m5!1m1!1s0x89a9f35a03f7c359:0x179c4047cbc6f2be!2m2!1d-77.8305816!2d34.2424684" target="blank">link to directions</a>
 							</nav>
 						</p>
 						</div>
