not sure, didn't push when i finished

--- a/index.html
+++ b/index.html
@@ -346,10 +346,19 @@ Registry
 Our Story / Photos
 =====================
 -->
-	<div class="section-seven">
 
+<div id="anchor-7" class="section-seven">
 
+<div class="section-seven">
+	<div class="loader">
+		<div class="shadow"></div>
+		<div class="box"></div>
 	</div>
+
+</div>
+
+</div>
+
 
 </body>
 </html>
