images added and registry

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Wedding information
 Hotels
 =====================
 -->
-	<div id="anchor-3" class="section-three">
+	<div id="anchor-3" class="section-three image">
 		<h1 class="noPanelTitle">Accomodations</h1>
 		<!-- <hr align="center" width="80%"> bug were it was showing over the sidebar -->
 
@@ -214,7 +214,7 @@ $139 (2 night minimum)</p>
 Travel
 =====================
 -->
-	<div id="anchor-4" class="section-four">
+	<div id="anchor-4" class="section-four image">
 
 		<div class="panel">
 			<div class="travelText">
@@ -244,7 +244,7 @@ Travel
 Things to do
 =====================
 -->
-	<div id="anchor-5" class="section-five">
+	<div id="anchor-5" class="section-five image">
 		<h1 class="noPanelTitle">Dope Things to Do When You Livin Dat Salt Life</h1>
 
 		<div class="row space panel">
@@ -340,7 +340,27 @@ Things to do
 Registry
 =====================
 -->
-	<div id="anchor-6" class="section-six"></div>
+	<div id="anchor-6" class="section-six image">
+		<h1 class="noPanelTitle">Buy us some stuff!</h1>
+
+		<div class="row space panel">
+			<div class="col col-span-12">
+				<p class="hotelText smallerText">
+				<strong>Registries </strong> <br>
+				While your attendance is gift enough, if you so choose, we are registered at the following stores:
+				 <br>
+				 			</p>
+			</div>
+				<div class="col col-span-6">
+
+					<nav class="cl-effect-8">
+						<a href="#" target="blank"><img class="linkLogo" src="img/crateBarrel.png"><span>Crate and Barrel</span></a>
+						<a href="#" target="blank"><img class="linkLogo" src="img/bedBath.png"><span>Bed Bath and Beyond</span></a>
+					</nav>
+
+				</div>
+			</div>
+	</div>
 <!--
 =====================
 Our Story / Photos
