--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ animated welcome svg
 				<li><a href="#anchor-4" onclick="smoothScroll('anchor-4');">Travel</a></li>
 				<li><a href="#anchor-5" onclick="smoothScroll('anchor-5');">Activities</a></li>
 				<li><a href="#anchor-6" onclick="smoothScroll('anchor-6');">Registry</a></li>
-				<li><a href="#anchor-7" onclick="smoothScroll('anchor-7');">Photos</a></li>
+				<li><a href="#anchor-7" onclick="smoothScroll('anchor-7');">Contact</a></li>
 
 		</ul>
 	</div>
@@ -75,8 +75,10 @@ Wedding information
 				1952 Allens Ln, Wilmington, NC 28403<br>
 				Ceremony starts: 5:00pm<br>
 
-				Link to Site<br>
-				Link to directions<br>
+				<nav class="cl-effect-8">
+					<a href="http://www.wrightsvillemanor.com/" target="blank">link to site</a>
+					<a href="https://www.google.com/maps/dir/''/wrightsvillemanor/@34.2214471,-77.8951001,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89a9f36ff76d2faf:0x2ba29ba829664ed0!2m2!1d-77.82506!2d34.221467" target="blank">link to directions</a>
+				</nav>
 				</p>
 				</div>
 			</div>
@@ -110,7 +112,7 @@ Hotels
 			</div>
 			<div class="col col-span-6">
 				<p class="hotelText">
-				<strong>Hampton Inn & Suites Landfall Park</strong> <br>
+				<strong>Hampton Inn & Suites Wilmington/Wrightsville Beach</strong> <br>
 				$104 and up<br>
 				1989 Eastwood Road, Wilmington, NC 28403<br>
 				910-256-9600 <br>
@@ -123,7 +125,7 @@ Hotels
 			<div class="modal" id="modal-one" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-header">
-						<h2>Hampton Inn & Suites Landfall Park</h2>
+						<h2>Hampton Inn & Suites Wilmington/Wrightsville Beach</h2>
 						<p><b>1989 Eastwood Road, Wilmington, NC 28403</b></p>
 						<p><b>910-256-9600</b></p>
 						<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
@@ -134,9 +136,9 @@ Hotels
 						Double/Double Guest Rooms (weeknights - Sunday) $109<br />
 						King Guest Rooms (Weekend nights - Friday-Saturday) $139<br />
 						Double/Double Guest Rooms (Weekend nights - Friday-Saturday) $149</p>
-						<p>To make a reservation: Call <b>910-256-9600</b> and request the Smith/Kalmykov Wedding group block or you can make a reservation here: http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG<br />
+						<p>To make a reservation: Call <b>910-256-9600</b> and request the Smith/Kalmykov Wedding group block.</a><br />
 						<p>The special room rate will be available until September 22nd or until the group block is sold-out, whichever comes first. <br />
-						<p>It's a 10 minute walk to Wrightsville Manor or a 4 minute drive. Walking distance to lots of restaurants at Lumina Station and a 7 min. drive to shopping and restaurants at Mayfaire Towne Center. 4 min to Wrightsville Beach<br />
+						<!-- <p>It's a 10 minute walk to Wrightsville Manor or a 4 minute drive. Walking distance to lots of restaurants at Lumina Station and a 7 min. drive to shopping and restaurants at Mayfaire Towne Center. 4 min to Wrightsville Beach<br /> -->
 					</div>
 					<div class="modal-footer">
 						<a href="#anchor-3" class="btn backModal">back</a>
@@ -145,7 +147,7 @@ Hotels
 				<!-- end Modal -->
 
 				</nav>
-			</p>
+			<!-- </p> -->
 			</div>
 
 			</div>
@@ -178,9 +180,9 @@ Hotels
 <p>Room Rates: <br />
 $139 (2 night minimum)</p>
 
-<p> To make a reservation: Call 910-509-4046 and request the Smith-Kalmykov Wedding group block or you can make a reservation here: http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG <br />
+<p> To make a reservation: Call 910-509-4046 and request the Smith-Kalmykov Wedding group block.<br />
 <p> The special room rate will be available until September 20th or until the group block is sold-out, whichever comes first.<br />
-<p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br />
+<!-- <p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br /> -->
 </div>
 <div class="modal-footer">
 <a href="#anchor-3" class="btn backModal">back</a>
@@ -189,7 +191,7 @@ $139 (2 night minimum)</p>
 <!-- end Modal -->
 
 						</nav>
-					</p>
+					<!-- </p> -->
 					</div>
 
 					</nav>
@@ -350,8 +352,9 @@ Registry
 				<div class="col col-span-6">
 
 					<nav class="cl-effect-8">
-						<a href="#" target="blank"><img class="linkLogo" src="img/crateBarrel.png"><span>Crate and Barrel</span></a>
-						<a href="#" target="blank"><img class="linkLogo" src="img/bedBath.png"><span>Bed Bath and Beyond</span></a>
+						<a href="http://www.crateandbarrel.com/gift-registry/allison-smith-and-michael-kalmykov/r5622845" target="blank"><img class="linkLogo" src="img/crateBarrel.png"><span>Crate and Barrel</span></a>
+						<a href="https://www.amazon.com/wedding/share/kovatfirstsight" target="blank"><img class="linkLogo" src="img/amazon.png"><span>Amazon</span></a>
+						<a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=544049537&eventType=Wedding&pwsurl=" target="blank"><img class="linkLogo" src="img/bedBath.png"><span>Bed Bath and Beyond</span></a>
 					</nav>
 
 				</div>
@@ -359,11 +362,23 @@ Registry
 	</div>
 <!--
 =====================
-Our Story / Photos
+Our Story / Contact
 =====================
 -->
 
 <div id="anchor-7" class="section-seven">
+	<h1 class="noPanelTitle">Contact us</h1>
+
+	<div class="row space panel">
+			<div class="col col-span-12">
+				<p class="hotelText smallerText">
+				<strong>By Email: michaelallisonwedding@gmail.com </strong> <br>
+				Have a question, just want to say hi, or let us know how baller you think this site is? Drop us a line!
+				 <br>
+							</p>
+			</div>
+		</div>
+
 
 <div class="section-seven">
 	<div class="loader">
