--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Things to do
 =====================
 -->
 	<div id="anchor-5" class="section-five image">
-		<h1 class="noPanelTitle">Dope Things to Do When You Livin Dat Salt Life</h1>
+		<h1 class="noPanelTitle">Explore that Salt Life</h1>
 
 		<div class="row space panel">
 			<div class="col col-span-5">
@@ -339,17 +339,17 @@ Registry
 =====================
 -->
 	<div id="anchor-6" class="section-six image">
-		<h1 class="noPanelTitle">Buy us some stuff!</h1>
+		<h1 class="noPanelTitle">Registries</h1>
 
 		<div class="row space panel">
 			<div class="col col-span-12">
 				<p class="hotelText smallerText">
-				<strong>Registries </strong> <br>
-				While your attendance is gift enough, if you so choose, we are registered at the following stores:
-				 <br>
+				<strong>
+				While your attendance is gift enough, if you so choose, we are registered at the following stores: </strong>
+
 				 			</p>
 			</div>
-				<div class="col col-span-6">
+				<div class="col col-span-6 rgstry">
 
 					<nav class="cl-effect-8">
 						<a href="http://www.crateandbarrel.com/gift-registry/allison-smith-and-michael-kalmykov/r5622845" target="blank"><img class="linkLogo" src="img/crateBarrel.png"><span>Crate and Barrel</span></a>
