added brunch and dessert

--- a/index.html
+++ b/index.html
@@ -92,6 +92,59 @@ Wedding information
 		</div>
 
 
+		<div class="row space panel">
+			<div class="col col-span-5">
+				<div class="weddingText">
+				<h1>Dessert!</h1>
+				<hr align="right" width="70%">
+					<p>
+						<strong>Date:</strong> Saturday, October 21st<br>
+						<strong>Location:</strong> Hampton Inn & Suites<br>
+						<strong>Time:</strong> Evening- time TBD<br>
+
+
+				<nav class="cl-effect-8">
+					<a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" target="blank">link to site</a>
+					<a href="https://www.google.com/maps/dir//Hampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach,+1989+Eastwood+Rd,+Wilmington,+NC+28403/@34.2234156,-77.8194701,15z/data=!4m15!1m6!3m5!1s0x0:0x6310b8abdf12d9f1!2sHampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach!8m2!3d34.2234156!4d-77.8194701!4m7!1m0!1m5!1m1!1s0x89a9f36e66a75773:0x6310b8abdf12d9f1!2m2!1d-77.8194701!2d34.2234156" target="blank">link to directions</a>
+				</nav>
+				</p>
+				</div>
+			</div>
+
+			<div class="col col-span-6">
+				<div class="venueImg">
+					<img src="img/Dessert.jpg">
+				</div>
+			</div>
+
+		</div>
+
+
+		<div class="row space panel">
+			<div class="col col-span-5">
+				<div class="weddingText">
+					<h1>Brunch</h1>
+					<hr align="right" width="70%">
+						<p>
+							<strong> Date:</strong> Monday, October 23rd <br>
+							<strong> Location:</strong> Famous Toastery<br>
+							<strong> Time:</strong> Evening- To be determined <br>
+
+				<nav class="cl-effect-8">
+					<a href="http://www.famoustoastery.com/" target="blank">link to site</a>
+					<a href="https://www.google.com/maps/dir//Famous+Toastery+of+Wilmington,+6722+Wrightsville+Ave,+Wilmington,+NC+28403/@34.2202005,-77.8282029,15z/data=!4m15!1m6!3m5!1s0x0:0x591a49e986623577!2sFamous+Toastery+of+Wilmington!8m2!3d34.2202005!4d-77.8282029!4m7!1m0!1m5!1m1!1s0x89a9f37b279a9ea3:0x591a49e986623577!2m2!1d-77.8282029!2d34.2202005" target="blank">link to directions</a>
+				</nav>
+				</p>
+				</div>
+			</div>
+
+			<div class="col col-span-6">
+				<div class="venueImg">
+					<img src="img/Brunch.jpg">
+				</div>
+			</div>
+
+		</div>
 
 
 <a href="#anchor-3" onclick="smoothScroll('anchor-3');"><i id="anchor-2" class="fa fa-angle-double-down animated bounce"></i></a>
