charset bug fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Hitched!</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
@@ -98,7 +99,7 @@ Wedding information
 				<h1>Dessert!</h1>
 				<hr align="right" width="70%">
 					<p>
-						<strong>Date:</strong> Saturday, October 21st<br>
+						<strong>Date:</strong> Saturday, October 21st<br>
 						<strong>Location:</strong> Hampton Inn & Suites<br>
 						<strong>Time:</strong> Evening- time TBD<br>
 
