--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	 <meta charset="UTF-8">
 	<title>Hitched!</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
@@ -96,12 +96,12 @@ Wedding information
 		<div class="row space panel">
 			<div class="col col-span-5">
 				<div class="weddingText">
-				<h1>Dessert!</h1>
+				<h1>Welcome Dessert</h1>
 				<hr align="right" width="70%">
 					<p>
-						<strong>Date:</strong> Saturday, October 21st<br>
+						<strong>Date:</strong> Saturday, October 21st<br>
 						<strong>Location:</strong> Hampton Inn & Suites<br>
-						<strong>Time:</strong> Evening- time TBD<br>
+						<strong>Time:</strong> 8:00pm<br>
 
 
 				<nav class="cl-effect-8">
@@ -129,7 +129,7 @@ Wedding information
 						<p>
 							<strong> Date:</strong> Monday, October 23rd <br>
 							<strong> Location:</strong> Famous Toastery<br>
-							<strong> Time:</strong> Evening- To be determined <br>
+							<strong> Time:</strong> Morning - To be determined <br>
 
 				<nav class="cl-effect-8">
 					<a href="http://www.famoustoastery.com/" target="blank">link to site</a>
